add Lab_6 and RGZ
